--- a/Camagru/style/sign_up_style.css
+++ b/Camagru/style/sign_up_style.css
@@ -64,6 +64,32 @@ body {
     background-size: cover;
 }
 
+.alert-message {
+    margin: 0 0 20px 58px;
+    padding: 3px 0 3px 3px;
+    border-radius: 5px;
+    font-family: 'Roboto Slab', sans-serif;
+    font-size: 20px;
+    width: 70%;
+    text-align: center;
+}
+
+.error-message {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.success-message {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.invisible {
+    display: none;
+}
+
 .forms {
     display: flex;
     width: 100%;
@@ -75,7 +101,6 @@ body {
 
 .sign-in {
     width: 400px;
-    height: 280px;
     border-radius: 5px;
     background-color: white;
     margin: 40px 120px;
@@ -84,7 +109,6 @@ body {
 
 .sign-up {
     width: 400px;
-    height: 500px;
     border-radius: 5px;
     background-color: white;
     margin: 40px 120px;
@@ -104,12 +128,10 @@ body {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 50%;
 }
 
 .form_input {
     width: 70%;
-    height: 50%;
     border: 1px solid rgba(0, 0, 0, .5);
     border-radius: 5px;
     outline: none;
@@ -121,7 +143,7 @@ body {
 
 .sign-in_button {
     width: 120px;
-    height: 80px;
+    height: 35px;
     border: none;
     outline: none;
     background: whitesmoke;
@@ -136,7 +158,7 @@ body {
     outline: none;
     color: black;
     font-family: 'Roboto Slab', serif;
-    font-size: 16px;
+    font-size: 15px;
     text-align: center;
 }
 
@@ -146,18 +168,17 @@ body {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 75%;
 }
 
 .sign-up_button {
     width: 120px;
-    height: 200px;
+    height: 40px;
     border: none;
     outline: none;
     background: whitesmoke;
     font-size: 20px;
     border-radius: 5px;
-    margin-top: 10px;
+    margin: 10px 0 20px 0;
     cursor: pointer;
 }
 
