--- a/Camagru/style/mainpage_style.css
+++ b/Camagru/style/mainpage_style.css
@@ -15,6 +15,7 @@ body {
             "sidenavbar content"
             "sidenavbar footer";
     height: 100vh;
+    /*z-index: -1;*/
 }
 
 .grid-container.no_sidenavbar {
@@ -32,6 +33,7 @@ body {
     align-items: center;
     padding-left: 10px;
     grid-area: header;
+    /*z-index: -1;*/
 }
 
 .fa-bars {
@@ -57,8 +59,8 @@ body {
     grid-area: sidenavbar;
     background-color: black;
     font-family: 'Roboto Slab', serif;
-    transition: 0.5s;
     overflow: hidden;
+    /*z-index: -1;*/
 }
 
 .homepage_button {
@@ -68,7 +70,6 @@ body {
 .sidenavbar_content {
     position: fixed;
     width: 240px;
-    transition: 0.3s;
 }
 
 .sidenavbar.isOpen {
@@ -149,28 +150,22 @@ body {
     grid-area: content;
     font-family: 'Roboto Slab', serif;
     color: whitesmoke;
+    /*z-index: -1;*/
 }
 
 .content_banner {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    height: 150px;
-    background: url("/assets/mountains.png") no-repeat center;
+    padding: 20px 20px 0 20px;
+    height: 203px;
     background-size: cover;
     color: black;
-    filter: grayscale(100%);
     font-size: 20px;
 }
 
 .content_banner-user {
     padding-left: 14px;
     font-size: 20px;
-    text-shadow:
-            0.07em 0 white,
-            0 0.07em white,
-            -0.07em 0 white,
-            0 -0.07em white;
 }
 
 .content_banner-overview {
@@ -184,16 +179,21 @@ body {
     flex-direction: column;
     align-items: center;
     font-size: 20px;
-    text-shadow:
-            0.07em 0 white,
-            0 0.07em white,
-            -0.07em 0 white,
-            0 -0.07em white;
 }
 
 .total_content {
     margin-bottom: 2px;
     font-size: 32px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    padding: 0 10px 0 10px;
+}
+
+.banner_total_desc {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 0 7px 0 7px;
+    border-radius: 10px;
+    margin: 0;
 }
 
 .content_card {
@@ -241,6 +241,7 @@ body {
 .picture_date {
     display: flex;
     align-items: center;
+    margin-bottom: 10px;
     padding-right: 5px;
 }
 
@@ -256,6 +257,10 @@ body {
 .card_picture_description {
     width: 770px;
     height: 37px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 2px solid rgb(200, 200, 200);
 }
 
 .picture_description {
@@ -368,9 +373,8 @@ body {
     background: transparent;
     padding-left: 10px;
     outline: none;
-    border-right: 2px;
-    border-left: 2px;
-    border-bottom: none;
+    border: none;
+    border-top: 2px solid rgb(200, 200, 200);
 }
 
 .footer {
@@ -381,4 +385,5 @@ body {
      padding: 0 16px;
      background-color: whitesmoke;
      font-family: 'Roboto Slab', serif;
+    /*z-index: -1;*/
  }
