--- a/Camagru/style/mainpage_style.css
+++ b/Camagru/style/mainpage_style.css
@@ -6,6 +6,10 @@ body {
     cursor: default;
 }
 
+.no_scroll {
+    overflow: hidden;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: 240px 1fr;
@@ -265,27 +269,6 @@ body {
     height: 515px;
 }
 
-.card_picture_description {
-    width: 770px;
-    height: 37px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 2px solid rgb(200, 200, 200);
-}
-
-.picture_description {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.description {
-    font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-    padding-left: 8px;
-}
-
 .card_picture-rating {
     display: flex;
     justify-content: space-between;
@@ -293,6 +276,7 @@ body {
     padding-left: 10px;
     width: 100%;
     height: 37px;
+    border-bottom: 2px solid rgb(200, 200, 200);
 }
 
 .picture_likes {
@@ -399,7 +383,7 @@ body {
     /*z-index: -1;*/
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 1200px) {
     .content_banner {
         padding: 20px 20px 0 20px;
         height: 190px;
