--- a/Camagru/style/post_style.css
+++ b/Camagru/style/post_style.css
@@ -24,7 +24,7 @@
 }
 
 .post_picture {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -45,8 +45,6 @@
     border-radius: 5px;
 }
 
-#post_card_content {
-}
 
 .post_card_header {
     width: 100%;
@@ -68,6 +66,7 @@
 #move_left {
     position: absolute;
     top: 250px;
+    left: 0;
 }
 
 #move_up {
@@ -122,9 +121,16 @@
     background: url("/assets/upload_icon.jpg");
 }
 
+.label_upload {
+    display: block;
+    width: 385px;
+    height: 515px;
+    cursor: pointer;
+}
+
 .post_card_bar {
     width: 25%;
-    margin: 10px 39%;
+    margin: 10px 290px;
     font-size: 20px;
     font-family: 'Roboto Slab', serif;
     padding: 0;
@@ -168,6 +174,7 @@
     height: 100px;
     width: 100px;
     border-radius: 5px;
+    margin: 5px;
 }
 
 #prev {
@@ -210,15 +217,17 @@
 }
 
 #old {
-    height: 100px;
+    height: 0;
     width: 600px;
-    background-color: red;
     margin: 0 -111%;
     padding: 0;
     transition: height 0.3s;
     border-radius: 5px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 #old.toggle {
-    height: 0;
+    height: 120px;
 }
