--- a/Camagru/style/profile_style.css
+++ b/Camagru/style/profile_style.css
@@ -318,6 +318,7 @@ body {
     padding-left: 10px;
     width: 100%;
     height: 37px;
+    border-bottom: 2px solid rgb(200, 200, 200);
 }
 
 .picture_likes {
