--- a/Matcha/client/src/containers/HomeContainers/home.css
+++ b/Matcha/client/src/containers/HomeContainers/home.css
@@ -8,5 +8,5 @@ body {
     height: 50vh;
     background: url('/assets/people-2562102_1280.jpg') center no-repeat;
     background-size: cover;
-    filter: grayscale(100%);
+    /*filter: grayscale(100%);*/
 }
