--- a/Matcha/client/src/CSS/global.css
+++ b/Matcha/client/src/CSS/global.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+@import url('https://fonts.googleapis.com/css?family=Bree+Serif');
+
 * {
     box-sizing: border-box;
 }
