--- a/Matcha/client/src/components/Login/login.css
+++ b/Matcha/client/src/components/Login/login.css
@@ -1,3 +1,4 @@
+
 p {
     margin: 0;
 }
@@ -6,12 +7,17 @@ p {
     border-bottom: solid 5px rgba(253, 103, 134, 0.8);
 }
 
+.container {
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to bottom right, pink, white);
+}
+
 .login_container {
     display: grid;
-    width: 90vw;
-    grid-template-rows: 3rem minmax(500px, 900px);
-    justify-content: center;
-    margin: 5rem 0 0 0;
 }
 
 .logo2 {
@@ -25,6 +31,7 @@ p {
     font-size: 1.5rem;
     font-weight: 100;
     color: #373D3F;
+    /*color: white;*/
 }
 
 .login_nav {
@@ -34,32 +41,35 @@ p {
 }
 
 .login_content {
-    display: grid;
-    width: 80vw;
-    grid-template-columns: 45vw 45vw;
-    grid-template-areas: 'pic forms';
+    display: flex;
+    justify-content: space-between;
+    width: 70rem;
+    height: 35rem;
+    background-color: #fff;
+    border-radius: 10px;
 }
 
 .login_picture {
-    grid-area: pic;
-    background: url('/assets/undraw_super_thank_you_obwk.svg') no-repeat center;
-    background-size: 85%;
+    width: 50%;
+}
+
+.picture {
+    position: relative;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
 }
 
 .login_forms {
-    grid-area: forms;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .login_box {
-    width: 25rem;
-    height: 35rem;
-    border-radius: 10px;
-    background-color: whitesmoke;
-    padding: 1rem;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
+    position: relative;
+    top: 20%;
+    width: 35rem;
+    /*height: 20rem;*/
+    padding: 1rem 1rem;
 }
 
 .login_option {
@@ -74,7 +84,7 @@ p {
 }
 
 .login_sign_in_button {;
-    margin-right: 2rem;
+    margin-left: 2rem;
     width: 6rem;
     height: 2rem;
     transition: .2s;
@@ -86,7 +96,7 @@ p {
 }
 
 .login_sign_up_button {
-    margin-left: 2rem;
+    margin-right: 2rem;
     width: 6rem;
     height: 2rem;
     transition: .2s;
