--- a/Matcha/client/src/components/Login/login.css
+++ b/Matcha/client/src/components/Login/login.css
@@ -63,14 +63,34 @@ p {
 }
 
 .login_forms {
+    display: flex;
+    justify-content: center;
+}
+
+.login_error {
+    width: 20rem;
+    height: 3rem;
+    color: white;
+    background: #FF1744;
+    z-index: 10;
+    position: absolute;
+    top: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    font-family: Rubik, sans-serif;
+    font-size: 16px;
+    box-shadow: 2px 2px 15px #FF1744;
+    transition: 0.3s;
 }
 
 .login_box {
     position: relative;
     top: 20%;
     width: 35rem;
-    /*height: 20rem;*/
     padding: 1rem 1rem;
+    transition: 0.3s;
 }
 
 .login_option {
