--- a/Matcha/client/src/components/Login/Sign_up/sign_up.css
+++ b/Matcha/client/src/components/Login/Sign_up/sign_up.css
@@ -32,13 +32,16 @@
     opacity: 0;
     transition: opacity 1.5s, transform 1s;
 }
+
 .input_container-enter-active {
     transform: translateX(0);
     opacity: 1;
 }
+
 .input_container-exit {
     opacity: 1;
 }
+
 .input_container-exit-active {
     opacity: 0;
     transition: opacity 500ms ease-in;
@@ -66,6 +69,7 @@
     color: #666666;
     padding-left: 3rem;
     outline: none;
+    box-shadow: 1px 2px 4px lightgrey;
 }
 
 .sign_up_select {
@@ -78,7 +82,7 @@
     font-size: 16px;
     border: none;
     outline: none;
-    transition: 0.3s;
+    box-shadow: 1px 2px 4px lightgrey;
 }
 
 .sign_up_select-enter {
@@ -86,13 +90,16 @@
     opacity: 0;
     transition: opacity 1.5s, transform 1s;
 }
+
 .sign_up_select-enter-active {
     transform: translateX(0);
     opacity: 1;
 }
+
 .sign_up_select-exit {
     opacity: 1;
 }
+
 .sign_up_select-exit-active {
     opacity: 0;
     transition: opacity 500ms ease-in;
@@ -109,9 +116,9 @@
     height: 2.5rem;
     margin: 0.5rem 0 0 1rem;
     border-radius: 25px;
+    background-color: white;
     font-size: 1.5rem;
     font-family: Rubik, serif;
-    transition: 2s;
     outline: none;
     border: solid 2px #9dc5ed;
     cursor: pointer;
@@ -138,4 +145,40 @@
 }
 
 .sign_up_button:hover {
+    box-shadow: 1px 2px 8px #9dc5ed;
+}
+
+@media screen and (max-width: 1160px) {
+    .sign_up_container {
+        width: 86%;
+    }
+
+    div[class*='-enter'], select[class*='-enter'],button[class*='-enter'],p[class*='-enter'] {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+
+    div[class*='-enter-active'], select[class*='-enter-active'],button[class*='-enter-active'],p[class*='-enter-active'] {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+
+    div[class*='-enter-done'], select[class*='-enter-done'],button[class*='-enter-done'],p[class*='-enter-done'] {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .sign_up_container {
+        width: 100%;
+    }
+
+    .sign_up_input {
+        width: 17rem;
+    }
+
+    .sign_up_select {
+        width: 17rem;
+    }
 }
